Fixed dark mode bugs

--- a/assets/scss/_intro.scss
+++ b/assets/scss/_intro.scss
@@ -44,7 +44,6 @@
     max-width: 100%;
     max-height: 400px;
     object-fit: contain;
-    margin-left: 20px;
   }
   // img {
   //   margin-right: -30px;
