--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -78,7 +78,7 @@ hr {
   }
 }
 
-#toggle-dark-mode {
+.dark-mode-toggle {
 	i {
 		font-size: 1.5rem;
 		position: relative;
